# attocode

./: .env.dev  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gepa.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
attocode/attocode_py/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  snapshot_report.html
attocode/attocode_py/.attocode/: swarm.hybrid.yaml.example  swarm.yaml.example
attocode/attocode_py/.attocode/skills/swarm-verify/: SKILL.md
attocode/attocode_py/.github/workflows/: release.yml  test.yml
attocode/attocode_py/docs/: ARCHITECTURE.md  BUDGET.md  MCP.md  advanced-features.md  ast-and-code-intelligence.md  cli-reference.md  code-intel-oss-demo-playbook.md  context-engineering.md  extending.md  getting-started.md  index.md  sessions-guide.md  skills-and-agents.md  swarm-guide.md  tracing-guide.md  troubleshooting.md  tui-guide.md
attocode/attocode_py/eval/: __init__.py  harness.py  runner.py
attocode/attocode_py/eval/oss_demo/: __main__.py  report_template.md  run_manifest.yaml
attocode/attocode_py/scripts/: setup.sh
attocode/attocode_py/src/attocode/: __init__.py  __main__.py  cli.py  commands.py  config.py  defaults.py
attocode/attocode_py/src/attocode/agent/: agent.py  builder.py  context.py  feature_initializer.py  message_builder.py  session_api.py
attocode/attocode_py/src/attocode/code_intel/: GUIDELINES.md  __init__.py  cli.py  installer.py  server.py
attocode/attocode_py/src/attocode/core/: completion.py  loop.py  response_handler.py  subagent_spawner.py  tool_executor.py
attocode/attocode_py/src/attocode/errors/: __init__.py
attocode/attocode_py/src/attocode/integrations/: __init__.py
attocode/attocode_py/src/attocode/integrations/agents/: __init__.py  async_subagent.py  blackboard.py  delegation.py  multi_agent.py
attocode/attocode_py/src/attocode/integrations/budget/: __init__.py  budget_pool.py  cancellation.py  economics.py  injection_budget.py  loop_detector.py  phase_tracker.py
attocode/attocode_py/src/attocode/integrations/context/: __init__.py  ast_chunker.py  ast_client.py  ast_server.py  ast_service.py  code_analyzer.py  code_selector.py  codebase_ast.py  codebase_context.py  compaction.py  embeddings.py  file_cache.py  graph_store.py  memory_store.py  semantic_cache.py  semantic_search.py  vector_store.py
attocode/attocode_py/src/attocode/integrations/lsp/: client.py
attocode/attocode_py/src/attocode/integrations/mcp/: __init__.py  client.py  client_manager.py  config.py  custom_tools.py  meta_tools.py
attocode/attocode_py/src/attocode/integrations/persistence/: __init__.py  store.py
attocode/attocode_py/src/attocode/providers/: __init__.py  anthropic.py  azure.py  base.py  fallback_chain.py  mock.py  model_cache.py  openai.py  openrouter.py  registry.py  resilient_provider.py  zai.py
attocode/attocode_py/src/attocode/shared/: __init__.py  budget_tracker.py  context_engine.py  persistence.py  shared_economics_state.py
attocode/attocode_py/src/attocode/tools/: __init__.py  base.py  bash.py  codebase.py  file_ops.py  image_utils.py  lsp.py  registry.py  security.py  standard.py  vision.py
attocode/attocode_py/src/attocode/tracing/: __init__.py  cache_boundary.py  collector.py  types.py
attocode/attocode_py/src/attocode/tricks/: __init__.py  failure_evidence.py  json_utils.py  kv_cache.py  recitation.py  recursive_context.py  reversible_compaction.py  serialization_diversity.py
attocode/attocode_py/src/attocode/tui/: app.py  event_hooks.py  events.py  theme.py
attocode/attocode_py/src/attocode/types/: agent.py  budget.py  events.py  messages.py
attocode/attocode_py/src/attocode_core/ast_index/: __init__.py  indexer.py
attocode/attocode_py/src/attocode_core/dependency_graph/: graph.py
attocode/attocode_py/src/attoswarm/: __init__.py  cli.py
attocode/attocode_py/src/attoswarm/adapters/: aider.py  claude.py
attocode/attocode_py/src/attoswarm/config/: loader.py  schema.py
attocode/attocode_py/src/attoswarm/coordinator/: aot_graph.py  budget.py  loop.py  merge_queue.py  orchestrator.py  scheduler.py  state_writer.py  subagent_manager.py  watchdog.py
attocode/attocode_py/src/attoswarm/protocol/: io.py  locks.py  models.py
attocode/attocode_py/src/attoswarm/replay/: __init__.py
attocode/attocode_py/src/attoswarm/tui/: app.py  stores.py
attocode/attocode_py/tests/: conftest.py
attocode/attocode_py/tests/helpers/: __init__.py  fixtures.py  trace_verifier.py
attocode/attocode_py/tests/integration/: test_attoswarm_live_smoke.py  test_attoswarm_smoke.py
attocode/attocode_py/tests/unit/: test_cli.py  test_code_intel.py  test_commands_reliability.py  test_commands_sessions.py  test_defaults.py  test_errors.py  test_memory_store.py  test_trace_verifier.py  test_tricks.py  test_types.py  test_vision_tool.py
attocode/attocode_py/tests/unit/attoswarm/: test_adapters_parser.py  test_aot_graph.py  test_ast_service.py  test_budget.py  test_cli.py  test_decompose.py  test_default_command.py  test_event_bus.py  test_reconciler.py  test_scheduler.py  test_stores.py  test_worktree.py
attocode/attocode_py/tests/unit/core/: test_agent.py  test_completion.py  test_loop.py  test_response_handler.py  test_subagent_spawner.py  test_tool_executor.py
attocode/attocode_py/tests/unit/integrations/: test_agents.py  test_mcp.py  test_streaming_lsp.py  test_swarm_core.py  test_swarm_infra.py  test_swarm_types.py
attocode/attocode_py/tests/unit/providers/: test_anthropic.py  test_azure.py  test_model_cache.py  test_openai.py  test_openrouter.py  test_registry.py  test_resilient_provider.py
attocode/attocode_py/tests/unit/tools/: test_registry.py
attocode/attocode_py/tests/unit/tracing/: test_analysis.py
attocode/attocode_py/tests/unit/tricks/: test_recitation.py  test_reversible_compaction.py
attocode/attocode_py/tests/unit/tui/: test_app.py  test_attoswarm_snapshots.py  test_bridges.py  test_dashboard_panes.py  test_dialogs.py  test_events.py  test_new_widgets.py  test_swarm_panel.py  test_widgets.py
(+2836 files in other folders)
