[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attocode"
version = "0.1.16"
description = "Production AI coding agent"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Attocode"
authors = [{ name = "eren23" }]
keywords = ["ai", "coding-agent", "cli", "tui", "mcp", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.0",
    "structlog>=24.1",
    "tenacity>=9.0",
    "psutil>=6.0",
    "mcp>=1.0",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
tree-sitter = [
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-c",
    "tree-sitter-cpp",
]
watch = ["watchfiles>=1.0"]
semantic = ["sentence-transformers>=3.0"]
semantic-nomic = ["sentence-transformers>=3.0", "einops"]
code-intel = []  # mcp moved to required deps (entry point always registered)
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.22",
    "bump-my-version>=0.28",
]

[project.scripts]
attocode = "attocode.cli:_entry_point"
attocodepy = "attocode.cli:_entry_point"
attoswarm = "attoswarm.cli:main"
attocode-code-intel = "attocode.code_intel.server:main"

[project.urls]
Homepage = "https://github.com/eren23/attocode"
Repository = "https://github.com/eren23/attocode"
"Bug Tracker" = "https://github.com/eren23/attocode/issues"
Changelog = "https://github.com/eren23/attocode/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/attocode", "src/attoswarm", "src/attocode_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "snapshot_report.html",
    ".attocode/traces/",
    ".attocode/sessions/",
    ".attocode/recordings/",
    ".claude/",
    ".agent/",
    ".traces/",
    "site/",
    "dist/",
    ".venv/",
    "__pycache__/",
    "*.db",
    "*.jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "live_swarm: opt-in live backend swarm smoke tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.coverage.run]
source = ["src/attocode", "src/attoswarm", "src/attocode_core"]
omit = ["tests/*"]

[tool.bumpversion]
current_version = "0.1.16"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/attocode/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
