[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attocode"
version = "0.2.5"
description = "Production AI coding agent"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Attocode"
authors = [{ name = "eren23" }]
keywords = ["ai", "coding-agent", "cli", "tui", "mcp", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.0",
    "structlog>=24.1",
    "tenacity>=9.0",
    "psutil>=6.0",
    "mcp>=1.0",
    "tomli_w>=1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
tree-sitter = [
    "tree-sitter>=0.23",
    # Tier 1: Original 9 languages
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-c",
    "tree-sitter-cpp",
    # Phase 1: 11 new programming languages
    "tree-sitter-c-sharp",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-lua",
    "tree-sitter-elixir",
    # tree-sitter-haskell: not available as standalone PyPI package;
    # install tree-sitter-language-pack for Haskell support
    "tree-sitter-bash",
    "tree-sitter-hcl",
    "tree-sitter-zig",
    # Phase 2: Data/config languages
    "tree-sitter-yaml",
    "tree-sitter-toml",
    "tree-sitter-json",
    "tree-sitter-html",
    "tree-sitter-css",
]
tree-sitter-all = [
    # Universal fallback: 170+ languages in one package
    "tree-sitter-language-pack>=0.6",
]
watch = ["watchfiles>=1.0"]
semantic = ["sentence-transformers>=3.0"]
semantic-nomic = ["sentence-transformers>=3.0", "einops"]
graph = ["networkx>=3.0"]
code-intel = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "networkx>=3.0",
]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "networkx>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "httpx-oauth>=0.15",
    "pygit2>=1.14",
    "redis[hiredis]>=5.0",
    "arq>=0.26",
    "pgvector>=0.3",
    "cryptography>=41.0",
]
full = [
    "attocode[anthropic,openai,tree-sitter,watch,semantic,graph,code-intel]",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.22",
    "bump-my-version>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
]

[project.scripts]
attocode = "attocode.cli:_entry_point"
attocodepy = "attocode.cli:_entry_point"
attoswarm = "attoswarm.cli:main"
attocode-code-intel = "attocode.code_intel.server:main"

[project.urls]
Homepage = "https://github.com/eren23/attocode"
Repository = "https://github.com/eren23/attocode"
"Bug Tracker" = "https://github.com/eren23/attocode/issues"
Changelog = "https://github.com/eren23/attocode/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/attocode", "src/attoswarm", "src/attocode_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "snapshot_report.html",
    ".attocode/traces/",
    ".attocode/sessions/",
    ".attocode/recordings/",
    ".claude/",
    ".agent/",
    ".traces/",
    "site/",
    "dist/",
    ".venv/",
    "__pycache__/",
    "*.db",
    "*.jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests that use real services (not mocked)",
    "live_swarm: opt-in live backend swarm smoke tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "SIM105"]

[tool.coverage.run]
source = ["src/attocode", "src/attoswarm", "src/attocode_core"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]

[tool.bumpversion]
current_version = "0.2.5"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/attocode/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/attoswarm/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
