[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attocode"
version = "0.1.5"
description = "Production AI coding agent"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.0",
    "structlog>=24.1",
    "tenacity>=9.0",
    "psutil>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
tree-sitter = ["tree-sitter>=0.23", "tree-sitter-python", "tree-sitter-javascript"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.22",
    "bump-my-version>=0.28",
]

[project.scripts]
attocode = "attocode.cli:main"
attocodepy = "attocode.cli:main"
attoswarm = "attoswarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/attocode", "src/attoswarm", "src/attocode_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "live_swarm: opt-in live backend swarm smoke tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.coverage.run]
source = ["src/attocode", "src/attoswarm", "src/attocode_core"]
omit = ["tests/*"]

[tool.bumpversion]
current_version = "0.1.5"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/attocode/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
